
    Contributed by **Raphaël Riel**.

- **Deployment**: Adds stopasgroup to the supervisor scripts (#4200)

    Contributed by :github_user:`martialp`.

- Using Exception.args to serialize/deserialize exceptions (#4085)

    Contributed by **Alexander Ovechkin**.

- **Timezones**: Correct calculation of application current time with timezone (#4173)

    Contributed by **George Psarakis**.

- **Remote Debugger**: Set the SO_REUSEADDR option on the socket (#3969)

    Contributed by **Theodore Dubois**.

- **Django**: Celery ignores exceptions raised during `django.setup()` (#4146)

    Contributed by **Kevin Gu**.

- Use heartbeat setting from application configuration for Broker connection (#4148)

    Contributed by :github_user:`mperice`.

- **Celery Beat**: Fixed exception caused by next_transit receiving an unexpected argument. (#4103)

    Contributed by **DDevine**.

- **Task** Introduce exponential backoff with Task auto-retry (#4101)

    Contributed by **David Baumgold**.

- **AsyncResult**: Remove weak-references to bound methods in AsyncResult promises. (#4131)

    Contributed by **Vinod Chandru**.

Documentation, CI, Installation and Tests fixes:


    - **Sammie S. Taunton**
    - **Dan Wilson**
    - :github_user:`pachewise`
    - **Sergi Almacellas Abellana**
    - **Omer Katz**
    - **Alex Zaitsev**
    - **Leo Singer**
    - **Rachel Johnson**
    - **Jon Dufresne**
    - **Samuel Dion-Girardeau**
    - **Ryan Guest**
    - **Huang Huang**
    - **Geoffrey Bauduin**
    - **Andrew Wong**
    - **Mads Jensen**
    - **Jackie Leng**
    - **Harry Moreno**
    - :github_user:`michael-k`
    - **Nicolas Mota**
    - **Armenak Baburyan**
    - **Patrick Zhang**
    - :github_user:`anentropic`
    - :github_user:`jairojair`
    - **Ben Welsh**
    - **Michael Peake**
    - **Fengyuan Chen**
    - :github_user:`arpanshah29`
    - **Xavier Hardy**
    - **Shitikanth**
    - **Igor Kasianov**
    - **John Arnold**
    - :github_user:`dmollerm`